--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   # Install
   - name: 'gcr.io/$PROJECT_ID/flutter'
-    args: ['config --enable-web','build web']
+    args: ['build web']
 
   - name: 'gcr.io/$PROJECT_ID/firebase'
     args: ['deploy']
