Added Basic Homepage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/
-  #  - images/a_dot_ham.jpeg
 
+  fonts:
+  - family: Brush
+    fonts:
+    - asset: fonts/brush.ttf
+  - family: George
+    fonts:
+    - asset: fonts/George.ttf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
