--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   flare_flutter: any
   scrolling_page_indicator: ^0.1.2
+  animated_splash: ^1.0.0
+  animated_text_kit: ^1.3.1
 
 dev_dependencies:
   flutter_test:
