--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   scrolling_page_indicator: ^0.1.2
   animated_splash: ^1.0.0
   animated_text_kit: ^1.3.1
+  provider: ^3.1.0+1
+  kf_drawer: ^1.1.2
 
 dev_dependencies:
   flutter_test:
