--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   scrolling_page_indicator: ^0.1.2
   provider: ^3.1.0+1
   kf_drawer: ^1.1.2
+  font_awesome_flutter: ^8.5.0
 
 dev_dependencies:
   flutter_test:
