--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-#  flare_flutter: any
   scrolling_page_indicator: ^0.1.2
   provider: ^3.1.0+1
   kf_drawer: ^1.1.2
   font_awesome_flutter: ^8.5.0
   firebase: ^7.0.0
   modal_progress_hud: ^0.1.3
+  flutter_web_image_picker: ^0.0.2
+  firebase_core: ^0.4.3+1
+  firebase_auth: ^0.15.2
 
 dev_dependencies:
   flutter_test:
