--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_web_image_picker: ^0.0.2
   firebase_core: ^0.4.3+1
   firebase_auth: ^0.15.2
+  url_launcher: ^5.4.1
 
 dev_dependencies:
   flutter_test:
