--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_core: ^0.4.3+1
   firebase_auth: ^0.15.2
   url_launcher: ^5.4.1
+  cloudinary_client: ^0.0.9
+  http: ^0.12.0+3
 
 dev_dependencies:
   flutter_test:
