--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^0.15.2
   url_launcher: ^5.4.1
   http: ^0.12.0+3
+  google_sign_in: ^4.1.1
 
 dev_dependencies:
   flutter_test:
