--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   url_launcher: ^5.4.1
   http: ^0.12.0+3
   google_sign_in: ^4.1.1
+  flutter_web_image_picker: ^0.0.2
+
 
 
 dev_dependencies:
